--- a/demo/MainWindow.xaml
+++ b/demo/MainWindow.xaml
@@ -1,12 +1,63 @@
-﻿<Window x:Class="demo.MainWindow"
+﻿<Window x:Class="AutoService.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:demo"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
+        Title="Управление заявками в автосервисе" Height="600" Width="Auto">
+    <Grid Margin="10">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <TabControl Grid.ColumnSpan="2">
+            <TabItem Header="Заявки">
+                <Grid Margin="5">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <Button Grid.Column="0" Grid.Row="0" Content="Добавить заявку" Click="AddRequest_Click"/>
+                    <DataGrid Grid.Column="0" Grid.Row="1" ItemsSource="{Binding Requests}" AutoGenerateColumns="False">
+                        <!-- Ваши столбцы -->
+                    </DataGrid>
+                </Grid>
+            </TabItem>
+            <TabItem Header="Механики">
+                <Grid Margin="5">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <Button Grid.Column="0" Grid.Row="0" Content="Добавить механика" Click="AddMechanic_Click"/>
+                    <DataGrid Grid.Column="0" Grid.Row="1" ItemsSource="{Binding Mechanics}" AutoGenerateColumns="False">
+                        <!-- Ваши столбцы -->
+                    </DataGrid>
+                </Grid>
+            </TabItem>
+            <TabItem Header="Работа с заявками">
+                <Grid Margin="5">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <!-- Ваше содержимое -->
+                </Grid>
+            </TabItem>
+        </TabControl>
     </Grid>
 </Window>
